# Cismu

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  astro.config.mjs  library  library.sqbpro  metadata.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp.rs  tsconfig.json  window.rs
astro/: package.json
crates/cismu-analyzer/: Cargo.toml
crates/cismu-core/: Cargo.toml
crates/cismu-core/src/: lib.rs  library.rs  library_manager.rs
crates/cismu-core/src/discography/: album.rs  artist.rs  genre_styles.rs  mod.rs  rating.rs  release.rs  release_track.rs  song.rs  track.rs  unresolved_track.rs
crates/cismu-db/: Cargo.toml  diesel.toml
crates/cismu-db/schema/: database.dbml
crates/cismu-local-library/: Cargo.toml  library.toml
crates/cismu-local-library/database/: V0__init.rs.sql  V0__init.sql  database.dbml
crates/cismu-local-library/database/migrations/: V0__init.sql  V1__init.sql
crates/cismu-local-library/src/: acoustid.rs  config_manager.rs  embedded.rs  error.rs  extensions.rs  fingerprint.rs  lib.rs  library_config.rs  library_manager.rs  manager.rs  scanner.rs  storage.rs  traits.rs
crates/cismu-local-library/src/audio_analysis/: features.rs  fingerprint.rs  mod.rs  quality.rs
crates/cismu-local-library/src/enrichment/: acoustid.rs  mod.rs
crates/cismu-local-library/src/metadata/: covers.rs  mod.rs  model.rs
crates/cismu-local-library/src/parsing/: mod.rs  parser.rs  unresolved_track.rs
crates/cismu-local-library/src/scanning/: extensions.rs  mod.rs
crates/cismu-local-library/src/storage/: embedded.rs  mod.rs
crates/cismu-paths/: Cargo.toml
crates/cismu-paths/src/: errors.rs  fs_utils.rs  lib.rs  paths.rs
crates/cismu-probe/: Cargo.toml
crates/cismu-probe/old/: audio_features.rs  main.rs  release_format.rs  release_type.rs
crates/cismu-probe/old/parsing/: mod.rs  rating.rs
crates/cismu-probe/src/: error.rs  lib.rs  main.rs  prelude.rs
crates/cismu-probe/src/analysis/: chroma.rs  features.rs  mod.rs  quality.rs
crates/cismu-probe/src/audio/: mod.rs
crates/cismu-probe/src/audio/decoder/: ffmpeg_native.rs  mod.rs
crates/cismu-probe/src/metadata/: mod.rs  reader.rs  utils.rs
crates/cismu-probe/src/metadata/fields/: country.rs  file_info.rs  genre.rs  mod.rs  rating.rs  release_format.rs  release_status.rs  release_type.rs  style.rs
crates/cismu-probe/src/metadata/reader/: mod.rs
crates/cismu-probe/src/metadata/reader/lofty/: mod.rs  rating.rs
crates/cismu-probe/src/pipeline/: probe.rs
desktop-app/backend/: Cargo.toml  tauri.conf.json
desktop-app/backend/src/: lib.rs  main.rs
desktop-app/dist-isolation/: index.html
desktop-app/frontend/src/components/: Main.vue
desktop-app/frontend/src/pages/: index.astro
desktop-app/isolation/: package.json
docs/: index.md
docs/.vitepress/: config.ts
old/: country.rs  genre.rs  rating.rs  release_status.rs  style.rs  work.rs
old/parsing/: date.rs  genre_and_style.rs  work.rs
src/: application.rs  error.rs  lib.rs  main.rs  renderer.rs  types.d.ts
src-isolation/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/music_library/: analysis.rs  config.rs  error.rs  events.rs  library.rs  metadata.rs  mod.rs  scanner.rs  storage.rs  track.rs  traits.rs  utils.rs
src/analysis/: features.rs
src/audio/: decoder.rs
src/audio_api/: audio_buffer.rs  audio_context.rs  audio_destination_node.rs  mod.rs
src/audio_api/nodes/: audio_buffer_source_node.rs  gain_node.rs  mod.rs  oscillator_node.rs
src/metadata/: mod.rs  model.rs  rating.rs
src/metadata/fields/: mod.rs  rating.rs  style.rs
src/pages/: index.astro
src/pipeline/: config.rs  probe.rs
xdo/: main.rs
xdo/utils/: mod.rs
