[package]
name = "cismu-probe"
version = "0.1.0"
edition = "2024"

[dependencies]
celes = "2.6.0"
lofty = "0.22.4"
thiserror = "2.0.16"
unicode-normalization = "0.1.24"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
anyhow = "1.0.99"
