[package]
name = "cismu-local-library"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
bytesize = { version = "2.0.1", features = ["serde"] }
cismu-paths = { version = "0.1.0", path = "../cismu-paths" }
config = "0.15.11"
derive_builder = "0.20.2"
dunce = "1.0.5"
humantime-serde = "1.1.1"
jwalk = "0.8.1"
lofty = "0.22.4"
notify = "8.0.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
sugar_path = "1.2.0"
thiserror = "2.0.12"
toml = "0.8.23"
