[package]
name = "cismu-probe"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
celes = "2.6.0"
lofty = "0.22.4"
thiserror = "2.0.16"
unicode-normalization = "0.1.24"
bitflags = "2.9.4"

serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
