[package]
name = "cismu-probe"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
celes = "2.6.0"
lofty = "0.22.4"
thiserror = "2.0.16"
unicode-normalization = "0.1.24"
bitflags = "2.9.4"
bliss-audio = "0.11.1"

serde = { version = "1.0.219", features = ["derive"], optional = true }
chromaprint = "0.2.0"
ffmpeg-next = { version = "7.1.0", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false }
rustfft = "6.4.0"
apodize = "1.0.0"


[features]
serde = ["dep:serde", "bliss-audio/serde"]
symphonia = ["dep:symphonia"]
ffmpeg = ["dep:ffmpeg-next"]
lofty = []
default = ["ffmpeg"]
